--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
         <h3 class="text-[#ea0029] text-4xl font-bold">Các vị trí tuyển dụng</h3>
         <div class="grid grid-cols-1 my-7 md:my-9 sm:grid-cols-2 md:grid-cols-3 md:gap-y-9 md:gap-x-8 gap-y-8 gap-x-7">
           <div>
-            <div class="w-full min-h-[200px] h-full">
-              <img src="./image/position-1.jpg" alt="" class="w-full h-full">
+            <div class="w-full min-h-[200px] h-full rounded-lg">
+              <img src="./image/position-1.jpg" alt="" class="w-full h-full rounded-lg">
               <div class="m-1 text-center">
                 <p>
                   <a href="###" class="text-[#ea0029]"> Nhân viên kế toán</a>
@@ -175,8 +175,8 @@
           </div>
           <!--  -->
           <div>
-            <div class="w-full min-h-[200px] h-full">
-              <img src="./image/position-2.jpg" alt="" class="w-full h-full">
+            <div class="w-full min-h-[200px] h-full rounded-lg">
+              <img src="./image/position-2.jpg" alt="" class="w-full h-full rounded-lg">
               <div class="m-1 text-center">
                 <p> <a href="###" class="text-[#ea0029]">
                     Nhân viên công nghệ thông tin
@@ -185,8 +185,8 @@
             </div>
           </div>
           <div>
-            <div class="w-full min-h-[200px] h-full">
-              <img src="./image/position-3.jpg" alt="" class="w-full h-full">
+            <div class="w-full min-h-[200px] h-full rounded-lg">
+              <img src="./image/position-3.jpg" alt="" class="w-full h-full rounded-lg">
               <div class="m-1 text-center">
                 <p> <a href="###" class="text-[#ea0029]">
                     Nhân viên marketing
@@ -195,8 +195,8 @@
             </div>
           </div>
           <div>
-            <div class="w-full min-h-[200px] h-full">
-              <img src="./image/position-4.jpg" alt="" class="w-full h-full">
+            <div class="w-full min-h-[200px] h-full rounded-lg">
+              <img src="./image/position-4.jpg" alt="" class="w-full h-full rounded-lg">
               <div class="m-1 text-center">
                 <p> <a href="###" class="text-[#ea0029]">
                     Nhân viên chăm sóc khách hàng
@@ -205,8 +205,8 @@
             </div>
           </div>
           <div>
-            <div class="w-full min-h-[200px] h-full">
-              <img src="./image/position-5.jpg" alt="" class="w-full h-full">
+            <div class="w-full min-h-[200px] h-full rounded-lg">
+              <img src="./image/position-5.jpg" alt="" class="w-full h-full rounded-lg">
               <div class="m-1 text-center">
                 <p> <a href="###" class="text-[#ea0029]">
                     Nhân viên quản lý chất lượng
@@ -215,8 +215,8 @@
             </div>
           </div>
           <div>
-            <div class="w-full min-h-[200px] h-full">
-              <img src="./image/position-6.jpg" alt="" class="w-full h-full">
+            <div class="w-full min-h-[200px] h-full rounded-lg">
+              <img src="./image/position-6.jpg" alt="" class="w-full h-full rounded-lg">
               <div class="m-1 text-center">
                 <p> <a href="###" class="text-[#ea0029]">
                     Nhân viên kinh doanh
