--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
         <div class="fixed top-0 left-0 w-full h-full max-w-80 bg-[#212121]">
           <div class="relative w-full h-full">
 
-            <div class="flex items-center justify-center w-10 h-10 m-4 mb-4 p-2 cursor-pointer" id="menu-close">
+            <div class="flex items-center justify-center w-10 h-10 p-2 m-4 mb-4 cursor-pointer" id="menu-close">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="text-white">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
@@ -109,27 +109,13 @@
       </div>
     </div>
 
-    <div class="absolute top-0 left-0 flex items-center justify-center w-full h-full">
-      <div class="text-center">
-        <p class="text-[33px] text-white uppercase">
-          <a href="###" class="text-4xl font-medium">
-            Giới thiệu
-          </a>
-        </p>
-        <p class="text-xl text-white w-[90%] mx-auto">
-          Viettel đang trên đà tăng trưởng nhanh và đạt nhiều đột phá trên các thị trường trong khu vực. Chúng tôi có
-          những kế hoạch thú vị và hy vọng bạn có thể tham gia cùng chúng tôi kiến tạo xã hội số theo cách của bạn.
-        </p>
-      </div>
-    </div>
-
     <div class="px-3 mx-auto sm:px-5 main max-w-7xl">
       <section>
         <div class="block gap-10 my-10 md:flex">
           <div class="w-full md:w-1/3">
             <img src="./image/about-1.jpg" alt="" class="w-full">
           </div>
-          <div class="w-full md:w-2/3">
+          <div class="w-full mt-3 md:w-2/3 md:mt-0">
             <h3 class="text-[#ea0029] text-4xl font-bold">GIÁ TRỊ DẪN DẮT
             </h3>
             <ul class="mt-3 ml-5">
