--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="fixed top-0 left-0 w-full h-full max-w-80 bg-[#212121]">
           <div class="relative w-full h-full">
 
-            <div class="flex items-center justify-center w-10 h-10 m-4 mb-4 p-2 cursor-pointer" id="menu-close">
+            <div class="flex items-center justify-center w-10 h-10 p-2 m-4 mb-4 cursor-pointer" id="menu-close">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="text-white">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
@@ -116,7 +116,7 @@
           <div class="w-full md:w-1/3">
             <img src="./image/slider-1.png" alt="">
           </div>
-          <div class="w-full md:w-2/3">
+          <div class="w-full mt-3 md:w-2/3 md:mt-0">
             <h3 class="text-[#ea0029] text-4xl font-bold">BIẾN GIẤC MƠ THÀNH HIỆN THỰC
             </h3>
             <ul class="mt-3 ml-5">
