--- a/recruitment.html
+++ b/recruitment.html
@@ -185,7 +185,7 @@
       <section>
         <div class="block md:flex gap-7">
           <div class="w-full md:w-3/5">
-            <p class="font-bold">HỒ SƠ DỰ TUYỂN:</p>
+            <p class="font-bold uppercase">Hồ sơ bao gồm khi đi phỏng vấn trực tiếp:</p>
             <ul class="ml-5 leading-7">
               <li class="list-disc">
                 Đơn xin việc, Sơ yếu lý lịch có xác nhận địa phương*
