--- a/about.html
+++ b/about.html
@@ -19,9 +19,10 @@
   <title>Về chúng tôi - Viettel Tuyển Dụng</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="./css/flowbite.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700&display=swap" rel="stylesheet" />
 </head>
 
-<body>
+<body class="font-['Roboto']">
   <div class="relative w-full h-full wrapper">
 
     <div class="w-full h-[520px] relative">
@@ -116,7 +117,7 @@
             <img src="./image/about-1.jpg" alt="" class="w-full">
           </div>
           <div class="w-full mt-3 md:w-2/3 md:mt-0">
-            <h3 class="text-[#ea0029] text-4xl font-bold">GIÁ TRỊ DẪN DẮT
+            <h3 class="text-[#ea0029] text-3xl md:text-4xl font-bold">GIÁ TRỊ DẪN DẮT
             </h3>
             <ul class="mt-3 ml-5">
               <li class="mb-2 list-disc">
