--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,10 @@
   <title>Liên hệ - Viettel Tuyển Dụng</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="./css/flowbite.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700&display=swap" rel="stylesheet" />
 </head>
 
-<body>
+<body class="font-['Roboto']">
   <div class="relative w-full h-full wrapper">
 
     <div class="w-full h-[520px] relative">
@@ -81,7 +82,7 @@
         <div class="fixed top-0 left-0 w-full h-full max-w-80 bg-[#212121]">
           <div class="relative w-full h-full">
 
-            <div class="flex items-center justify-center w-10 h-10 m-4 mb-4 p-2 cursor-pointer" id="menu-close">
+            <div class="flex items-center justify-center w-10 h-10 p-2 m-4 mb-4 cursor-pointer" id="menu-close">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="text-white">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
