--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
   <title>Trang chủ - Viettel Tuyển Dụng</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="./css/flowbite.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700&display=swap" rel="stylesheet" />
 </head>
 
-<body>
+<body class="font-['Roboto']">
   <div class="relative w-full h-full wrapper">
 
     <div class="w-full h-[520px] bg-gray-500 relative">
@@ -117,7 +118,7 @@
             <img src="./image/slider-1.png" alt="">
           </div>
           <div class="w-full mt-3 md:w-2/3 md:mt-0">
-            <h3 class="text-[#ea0029] text-4xl font-bold">BIẾN GIẤC MƠ THÀNH HIỆN THỰC
+            <h3 class="text-[#ea0029] text-3xl md:text-4xl font-bold">BIẾN GIẤC MƠ THÀNH HIỆN THỰC
             </h3>
             <ul class="mt-3 ml-5">
               <li class="mb-2 list-disc">
@@ -161,7 +162,7 @@
       </section>
 
       <section>
-        <h3 class="text-[#ea0029] text-4xl font-bold">Các vị trí tuyển dụng</h3>
+        <h3 class="text-[#ea0029] text-3xl md:text-4xl font-bold">Các vị trí tuyển dụng</h3>
         <div class="grid grid-cols-1 my-7 md:my-9 sm:grid-cols-2 md:grid-cols-3 md:gap-y-9 md:gap-x-8 gap-y-8 gap-x-7">
           <div>
             <div class="w-full min-h-[200px] h-full rounded-lg">
@@ -226,7 +227,7 @@
           </div>
         </div>
 
-        <div class="my-5 text-center">
+        <div class="my-10 text-center">
           <a href="https://forms.gle/s7ynv47imPwTo1aX6" target="_blank">
             <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-[80%]">Ứng tuyển ngay</button>
           </a>
@@ -234,7 +235,7 @@
       </section>
 
       <section>
-        <h3 class="text-[#ea0029] text-4xl font-bold">NƠI LÀM VIỆC BẠN ĐANG TÌM KIẾM
+        <h3 class="text-[#ea0029] text-3xl md:text-4xl font-bold">NƠI LÀM VIỆC BẠN ĐANG TÌM KIẾM
         </h3>
         <p class="mt-3 italic text-[#000] font-medium">Tập đoàn Công nghiệp - Viễn thông Quân đội (VIETTEL) là nhà
           cung cấp dịch vụ toàn cầu, luôn đi đầu trong đổi mới sáng tạo và luôn lắng nghe thấu hiểu để đem tới những
