--- a/recruitment.html
+++ b/recruitment.html
@@ -19,9 +19,10 @@
   <title>Tuyển dụng - Viettel Tuyển Dụng</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="./css/flowbite.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700&display=swap" rel="stylesheet" />
 </head>
 
-<body>
+<body class="font-['Roboto']">
   <div class="relative w-full h-full wrapper">
 
     <div class="w-full h-[520px] relative">
@@ -111,7 +112,7 @@
 
     <div class="px-3 mx-auto sm:px-5 main max-w-7xl md:mt-3">
       <section>
-        <h3 class="text-[#ea0029] text-4xl font-bold">Các vị trí tuyển dụng</h3>
+        <h3 class="text-[#ea0029] text-3xl md:text-4xl font-bold mt-3">Các vị trí tuyển dụng</h3>
         <div class="grid grid-cols-1 my-7 md:my-9 sm:grid-cols-2 md:grid-cols-3 md:gap-y-9 md:gap-x-8 gap-y-8 gap-x-7">
           <div>
             <div class="w-full min-h-[200px] h-full rounded-lg">
@@ -176,31 +177,32 @@
           </div>
         </div>
 
-        <div class="my-5 text-center">
+        <div class="my-10 text-center">
           <a href="https://forms.gle/s7ynv47imPwTo1aX6" target="_blank">
             <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-[80%]">Ứng tuyển ngay</button>
           </a>
         </div>
       </section>
+
       <section>
         <div class="block md:flex gap-7">
           <div class="w-full md:w-3/5">
             <p class="font-bold uppercase">Hồ sơ bao gồm khi đi phỏng vấn trực tiếp:</p>
             <ul class="ml-5 leading-7">
               <li class="list-disc">
-                Đơn xin việc, Sơ yếu lý lịch có xác nhận địa phương*
+                Đơn xin việc, Sơ yếu lý lịch có xác nhận địa phương
               </li>
               <li class="list-disc">
-                Bằng cấp, bảng điểm (bản sao có công chứng)*
+                Bằng cấp, bảng điểm (bản sao có công chứng)
               </li>
               <li class="list-disc">
-                CMND/CCCD 3 bản sao có công chứng* và 1 CMND/CCCD photo
+                CMND/CCCD 3 bản sao có công chứng và 1 CMND/CCCD photo
               </li>
               <li class="list-disc">
-                Sổ hộ khẩu bản sao công chứng* và Giấy khai sinh (bản sao)*
+                Sổ hộ khẩu bản sao công chứng và Giấy khai sinh (bản sao)
               </li>
               <li class="list-disc">
-                Giấy khám sức khỏe (A3)* và Ảnh 3x4: 04 cái
+                Giấy khám sức khỏe (A3) và Ảnh 3x4: 04 cái
               </li>
             </ul>
 
