remove comment and update seo

--- a/about.html
+++ b/about.html
@@ -7,15 +7,15 @@
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Viettel tuyển dụng">
   <meta property="og:title" content="VIETTEL | Show us your way">
-  <meta property="og:url" content="https://tuyendung.viettel.vn">
+  <meta property="og:url" content="https://vietteltuyendung.com">
   <meta property="og:description"
     content="Cùng Viettel kiến tạo tương lai - Ba điều Viettel sẽ mang đến cho bạn là cơ hội không ngừng sáng tạo, thách thức để khẳng định bản thân và điều kiện để học học và phát triển.">
   <meta property="fb:app_id" content="213262783496474">
-  <meta property="og:image" content="./image/social_image.jpg">
+  <meta property="og:image" content="https://vietteltuyendung.com/image/social_image.jpg">
   <meta property="og:image:width" content="574">
   <meta property="og:image:height" content="240">
-  <link rel='icon' type='image/x-icon' href='./image/LogoNew.ico' />
-  <link rel='shortcut icon' type='image/x-icon' href='./image/LogoNew.ico' />
+  <link rel='icon' type='image/x-icon' href='https://vietteltuyendung.com/image/LogoNew.ico' />
+  <link rel='shortcut icon' type='image/x-icon' href='https://vietteltuyendung.com/image/LogoNew.ico' />
   <title>Về chúng tôi - Viettel Tuyển Dụng</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="./css/flowbite.min.css" rel="stylesheet" />
@@ -219,300 +219,6 @@
         </p>
       </div>
     </div>
-
-    <!-- <div class="px-3 mx-auto sm:px-5 main max-w-7xl">
-
-      <section>
-        <div class="block my-5 md:flex gap-7">
-          <div class="w-full md:w-1/3">
-            <img src="https://picsum.photos/300/300" alt="" class="w-full rounded-lg h-44">
-          </div>
-
-          <div class="w-full md:w-2/3">
-            <p class="text-[#ea0029] text-2xl font-bold">HUMANS OF TIN - 01</p>
-
-            <div id="accordion-collapse-1" data-accordion="collapse">
-              <h2 id="accordion-collapse-heading-1">
-                <button type="button"
-                  class="flex items-center justify-between w-full gap-3 p-3 font-medium text-gray-500 border border-gray-200 rtl:text-right rounded-t-xl hover:bg-gray-100"
-                  data-accordion-target="#accordion-collapse-body-1" aria-expanded="false"
-                  aria-controls="accordion-collapse-body-1">
-                  <span>Vị thuyền trưởng tài ba - Anh Nguyễn Văn Mậu - Giám Đốc TIN</span>
-                  <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M9 5 5 1 1 5" />
-                  </svg>
-                </button>
-              </h2>
-              <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
-                <div class="p-5 border border-gray-200">
-                  <p class="mb-2 text-gray-500 dark:text-gray-400">
-                    Chào mừng bạn đến với “Humans of TIN”. Đây là chuyên mục chia sẻ về những con người tại TIN, nơi bật
-                    mí cho mọi người nhiều điều thú vị, là nơi những câu chuyện đặc biệt về các TINer được kể lại và là
-                    nơi đưa bạn đến với bầu trời của cảm xúc.
-
-                    Trong số đầu tiên, hãy cùng chúng mình đến với một nhân vật mà có lẽ là ở TIN không ai không biết,
-                    đó là vị thuyền trưởng tài ba - anh Nguyễn Văn Mậu – Giám đốc TIN.
-
-                    Bén duyên với TIN từ năm 2010, nhà TIN đã nhận được rất nhiều tình yêu, năng lượng và có thêm nhiều
-                    cảm hứng trong công việc từ anh. Xuất phát từ một người làm về kỹ thuật, hơn ai hết, anh Mậu hiểu
-                    rất rõ tính chất công việc của anh em để có thể xây dựng và đưa TIN lớn lên từng ngày.
-
-                    Trong Sử ký FTEL 25 năm, anh Mậu đã chia sẻ rất tâm huyết về điều khiến anh hạnh phúc nhất. Với anh
-                    Mậu, có nhiều điều trong công việc làm anh hạnh phúc, nhưng những hạnh phúc khác thường ngắn trong
-                    khoảnh khắc, còn điều khiến anh cảm thấy hạnh phúc lâu dài chính là nhìn thấy anh em, thấy đội ngũ
-                    của mình trưởng thành và phát triển hơn mỗi ngày.
-
-                    Gắn bó với TIN từ những ngày đầu thành lập, khi những cuộn cáp đồng còn nặng trịch, đòi hỏi người
-                    công nhân kỹ thuật TIN phải có cả sức khỏe cũng như sức bền, vị thuyền trưởng của chúng ta đã trăn
-                    trở, phải làm sao để nâng tầm cho đội ngũ kỹ thuật TIN. Với sự tâm huyết và tinh thần quyết liệt,
-                    anh Mậu đã từng bước đưa TIN thay đổi. Dần dần, tên gọi của anh em được chuyển sang “nhân viên kỹ
-                    thuật” với sự chỉn chu hơn trong hình ảnh, quan tâm hơn về chất lượng tay nghề cũng như các tiêu
-                    chuẩn kỹ thuật khi triển khai, bảo trì.
-
-                    Những câu chuyện về tinh thần chăm sóc khách hàng tận tâm của anh em TIN cũng được chia sẻ, lan tỏa
-                    nhiều hơn gắn với tên gọi “anh hùng đi dây” hay “anh hùng cứu nét”. Chúng ta cũng nhìn thấy sự
-                    trưởng thành và chuyên nghiệp của các Cán bộ Quản lý, Đội trưởng qua từng ngày. Và đội ngũ SO,
-                    Doctor T ra đời trong mùa dịch Covid-19 đã tiếp nối truyền thống sáng tạo của người kỹ thuật TIN.
-
-                    Với những người đã làm việc trực tiếp cùng anh Mậu, hầu hết đều chia sẻ anh rất phong độ và thần
-                    thái, nhưng đôi khi anh cũng có chút khó tính. Anh Mậu còn được biết đến là người yêu cái đẹp và
-                    luôn cẩn thận đến từng chi tiết.
-
-                    Chắc chắn mọi người đã rất quen với những câu nói của sếp Mậu như “Quyết tâm làm bằng được”,
-                    “Amazing”,… Đó cũng chính là động lực để anh chị em TIN thêm cố gắng và nỗ lực từng ngày trong công
-                    việc, để cùng nhau bứt phá qua từng dự án và cùng nhau xây dựng TIN ngày một lớn mạnh.
-
-                  </p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-        <div class="block my-5 md:flex gap-7">
-          <div class="w-full md:w-1/3">
-            <img src="https://picsum.photos/300/300" alt="" class="w-full rounded-lg h-44">
-          </div>
-
-          <div class="w-full md:w-2/3">
-            <p class="text-[#ea0029] text-2xl font-bold">HUMANS OF TIN - 02</p>
-
-            <div id="accordion-collapse-2" data-accordion="collapse">
-
-              <h2 id="accordion-collapse-heading-2">
-                <button type="button"
-                  class="flex items-center justify-between w-full gap-3 p-3 font-medium text-gray-500 border border-gray-200 rtl:text-right rounded-t-xl hover:bg-gray-100"
-                  data-accordion-target="#accordion-collapse-body-2" aria-expanded="false"
-                  aria-controls="accordion-collapse-body-2">
-                  <span>Vị thuyền trưởng tài ba - Anh Nguyễn Văn Mậu - Giám Đốc TIN</span>
-                  <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M9 5 5 1 1 5" />
-                  </svg>
-                </button>
-              </h2>
-              <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
-                <div class="p-5 border border-gray-200">
-                  <p class="mb-2 text-gray-500 dark:text-gray-400">
-                    Chào mừng bạn đến với “Humans of TIN”. Đây là chuyên mục chia sẻ về những con người tại TIN, nơi bật
-                    mí cho mọi người nhiều điều thú vị, là nơi những câu chuyện đặc biệt về các TINer được kể lại và là
-                    nơi đưa bạn đến với bầu trời của cảm xúc.
-
-                    Trong số đầu tiên, hãy cùng chúng mình đến với một nhân vật mà có lẽ là ở TIN không ai không biết,
-                    đó là vị thuyền trưởng tài ba - anh Nguyễn Văn Mậu – Giám đốc TIN.
-
-                    Bén duyên với TIN từ năm 2010, nhà TIN đã nhận được rất nhiều tình yêu, năng lượng và có thêm nhiều
-                    cảm hứng trong công việc từ anh. Xuất phát từ một người làm về kỹ thuật, hơn ai hết, anh Mậu hiểu
-                    rất rõ tính chất công việc của anh em để có thể xây dựng và đưa TIN lớn lên từng ngày.
-
-                    Trong Sử ký FTEL 25 năm, anh Mậu đã chia sẻ rất tâm huyết về điều khiến anh hạnh phúc nhất. Với anh
-                    Mậu, có nhiều điều trong công việc làm anh hạnh phúc, nhưng những hạnh phúc khác thường ngắn trong
-                    khoảnh khắc, còn điều khiến anh cảm thấy hạnh phúc lâu dài chính là nhìn thấy anh em, thấy đội ngũ
-                    của mình trưởng thành và phát triển hơn mỗi ngày.
-
-                    Gắn bó với TIN từ những ngày đầu thành lập, khi những cuộn cáp đồng còn nặng trịch, đòi hỏi người
-                    công nhân kỹ thuật TIN phải có cả sức khỏe cũng như sức bền, vị thuyền trưởng của chúng ta đã trăn
-                    trở, phải làm sao để nâng tầm cho đội ngũ kỹ thuật TIN. Với sự tâm huyết và tinh thần quyết liệt,
-                    anh Mậu đã từng bước đưa TIN thay đổi. Dần dần, tên gọi của anh em được chuyển sang “nhân viên kỹ
-                    thuật” với sự chỉn chu hơn trong hình ảnh, quan tâm hơn về chất lượng tay nghề cũng như các tiêu
-                    chuẩn kỹ thuật khi triển khai, bảo trì.
-
-                    Những câu chuyện về tinh thần chăm sóc khách hàng tận tâm của anh em TIN cũng được chia sẻ, lan tỏa
-                    nhiều hơn gắn với tên gọi “anh hùng đi dây” hay “anh hùng cứu nét”. Chúng ta cũng nhìn thấy sự
-                    trưởng thành và chuyên nghiệp của các Cán bộ Quản lý, Đội trưởng qua từng ngày. Và đội ngũ SO,
-                    Doctor T ra đời trong mùa dịch Covid-19 đã tiếp nối truyền thống sáng tạo của người kỹ thuật TIN.
-
-                    Với những người đã làm việc trực tiếp cùng anh Mậu, hầu hết đều chia sẻ anh rất phong độ và thần
-                    thái, nhưng đôi khi anh cũng có chút khó tính. Anh Mậu còn được biết đến là người yêu cái đẹp và
-                    luôn cẩn thận đến từng chi tiết.
-
-                    Chắc chắn mọi người đã rất quen với những câu nói của sếp Mậu như “Quyết tâm làm bằng được”,
-                    “Amazing”,… Đó cũng chính là động lực để anh chị em TIN thêm cố gắng và nỗ lực từng ngày trong công
-                    việc, để cùng nhau bứt phá qua từng dự án và cùng nhau xây dựng TIN ngày một lớn mạnh.
-
-                  </p>
-                </div>
-              </div>
-
-            </div>
-
-          </div>
-        </div>
-
-        <div class="block my-5 md:flex gap-7">
-          <div class="w-full md:w-1/3">
-            <img src="https://picsum.photos/300/300" alt="" class="w-full rounded-lg h-44">
-          </div>
-
-          <div class="w-full md:w-2/3">
-            <p class="text-[#ea0029] text-2xl font-bold">HUMANS OF TIN - 03</p>
-
-            <div id="accordion-collapse-3" data-accordion="collapse">
-              <h2 id="accordion-collapse-heading-3">
-                <button type="button"
-                  class="flex items-center justify-between w-full gap-3 p-3 font-medium text-gray-500 border border-gray-200 rtl:text-right rounded-t-xl hover:bg-gray-100"
-                  data-accordion-target="#accordion-collapse-body-3" aria-expanded="false"
-                  aria-controls="accordion-collapse-body-3">
-                  <span>Vị thuyền trưởng tài ba - Anh Nguyễn Văn Mậu - Giám Đốc TIN</span>
-                  <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M9 5 5 1 1 5" />
-                  </svg>
-                </button>
-              </h2>
-              <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
-                <div class="p-5 border border-gray-200">
-                  <p class="mb-2 text-gray-500 dark:text-gray-400">
-                    Chào mừng bạn đến với “Humans of TIN”. Đây là chuyên mục chia sẻ về những con người tại TIN, nơi bật
-                    mí cho mọi người nhiều điều thú vị, là nơi những câu chuyện đặc biệt về các TINer được kể lại và là
-                    nơi đưa bạn đến với bầu trời của cảm xúc.
-
-                    Trong số đầu tiên, hãy cùng chúng mình đến với một nhân vật mà có lẽ là ở TIN không ai không biết,
-                    đó là vị thuyền trưởng tài ba - anh Nguyễn Văn Mậu – Giám đốc TIN.
-
-                    Bén duyên với TIN từ năm 2010, nhà TIN đã nhận được rất nhiều tình yêu, năng lượng và có thêm nhiều
-                    cảm hứng trong công việc từ anh. Xuất phát từ một người làm về kỹ thuật, hơn ai hết, anh Mậu hiểu
-                    rất rõ tính chất công việc của anh em để có thể xây dựng và đưa TIN lớn lên từng ngày.
-
-                    Trong Sử ký FTEL 25 năm, anh Mậu đã chia sẻ rất tâm huyết về điều khiến anh hạnh phúc nhất. Với anh
-                    Mậu, có nhiều điều trong công việc làm anh hạnh phúc, nhưng những hạnh phúc khác thường ngắn trong
-                    khoảnh khắc, còn điều khiến anh cảm thấy hạnh phúc lâu dài chính là nhìn thấy anh em, thấy đội ngũ
-                    của mình trưởng thành và phát triển hơn mỗi ngày.
-
-                    Gắn bó với TIN từ những ngày đầu thành lập, khi những cuộn cáp đồng còn nặng trịch, đòi hỏi người
-                    công nhân kỹ thuật TIN phải có cả sức khỏe cũng như sức bền, vị thuyền trưởng của chúng ta đã trăn
-                    trở, phải làm sao để nâng tầm cho đội ngũ kỹ thuật TIN. Với sự tâm huyết và tinh thần quyết liệt,
-                    anh Mậu đã từng bước đưa TIN thay đổi. Dần dần, tên gọi của anh em được chuyển sang “nhân viên kỹ
-                    thuật” với sự chỉn chu hơn trong hình ảnh, quan tâm hơn về chất lượng tay nghề cũng như các tiêu
-                    chuẩn kỹ thuật khi triển khai, bảo trì.
-
-                    Những câu chuyện về tinh thần chăm sóc khách hàng tận tâm của anh em TIN cũng được chia sẻ, lan tỏa
-                    nhiều hơn gắn với tên gọi “anh hùng đi dây” hay “anh hùng cứu nét”. Chúng ta cũng nhìn thấy sự
-                    trưởng thành và chuyên nghiệp của các Cán bộ Quản lý, Đội trưởng qua từng ngày. Và đội ngũ SO,
-                    Doctor T ra đời trong mùa dịch Covid-19 đã tiếp nối truyền thống sáng tạo của người kỹ thuật TIN.
-
-                    Với những người đã làm việc trực tiếp cùng anh Mậu, hầu hết đều chia sẻ anh rất phong độ và thần
-                    thái, nhưng đôi khi anh cũng có chút khó tính. Anh Mậu còn được biết đến là người yêu cái đẹp và
-                    luôn cẩn thận đến từng chi tiết.
-
-                    Chắc chắn mọi người đã rất quen với những câu nói của sếp Mậu như “Quyết tâm làm bằng được”,
-                    “Amazing”,… Đó cũng chính là động lực để anh chị em TIN thêm cố gắng và nỗ lực từng ngày trong công
-                    việc, để cùng nhau bứt phá qua từng dự án và cùng nhau xây dựng TIN ngày một lớn mạnh.
-
-                  </p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-      </section>
-    </div>
-
-    <div class="py-7 w-full bg-[#ea0029]">
-      <div class="px-3 mx-auto sm:px-5 max-w-7xl">
-        <p class="text-2xl font-bold text-white">
-          HOẠT ĐỘNG NỔI BẬT KHÁC
-        </p>
-      </div>
-    </div>
-
-    <div class="px-3 mx-auto sm:px-5 main max-w-7xl">
-      <section>
-        <div class="block gap-10 my-10 md:flex">
-          <div class="w-full md:w-1/3">
-            <img src="./image/about-image.png" alt="" class="w-full max-h-96">
-          </div>
-          <div class="w-full md:w-2/3">
-            <h3 class="text-[#ea0029] text-2xl font-bold uppercase text-center">NGHỈ MÁT TIN HO 2023 - HÀNH TRÌNH RỰC RỠ
-            </h3>
-            <div class="mt-3">
-              <p class="mb-2">
-                Hành trình rực rỡ “2 ngày 1 đêm” - chương trình nghỉ mát với tinh thần “chơi hết mình” của anh chị
-                em TIN HO vừa được diễn ra tại Bãi Cháy – Quảng Ninh.
-              </p>
-              <p class="mb-2">
-                Tại đây, anh chị em HO đã được tham gia các hoạt động vui chơi, tham quan đầy thú vị sau những giờ
-                làm việc căng thẳng. Đặc biệt, bữa tiệc âm nhạc với những vũ điệu sôi động cùng trò chơi hấp dẫn đã
-                để lại ấn tượng khó phai trong lòng những thành viên tham dự.
-              </p>
-              <p class="mb-2">
-                Cháy hết mình trong chuyến đi thật ý nghĩa, mong rằng người nhà TIN đã ghi lại được nhiều bức ảnh,
-                câu chuyện và kỷ niệm tốt đẹp, giúp các thành viên có những phút giây thư giãn, gần nhau hơn.
-              </p>
-              <p class="mb-2">
-                Anh em trên toàn TIN đã đi nghỉ mát chưa? Cùng chia sẻ những khoảnh khắc đẹp nhất của kỳ nghỉ mát
-                2023 nhé
-              </p>
-            </div>
-
-            <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-full">
-              Xem chi tiết
-            </button>
-          </div>
-        </div>
-
-        <div class="block gap-10 my-10 md:flex">
-          <div class="w-full md:w-1/3">
-            <img src="./image/about-image.png" alt="" class="w-full max-h-96">
-          </div>
-          <div class="w-full md:w-2/3">
-            <h3 class="text-[#ea0029] text-2xl font-bold uppercase text-center">NGHỈ MÁT TIN HO 2023 - HÀNH TRÌNH RỰC RỠ
-            </h3>
-            <div class="mt-3">
-              <p class="mb-2">
-                Hành trình rực rỡ “2 ngày 1 đêm” - chương trình nghỉ mát với tinh thần “chơi hết mình” của anh chị
-                em TIN HO vừa được diễn ra tại Bãi Cháy – Quảng Ninh.
-              </p>
-              <p class="mb-2">
-                Tại đây, anh chị em HO đã được tham gia các hoạt động vui chơi, tham quan đầy thú vị sau những giờ
-                làm việc căng thẳng. Đặc biệt, bữa tiệc âm nhạc với những vũ điệu sôi động cùng trò chơi hấp dẫn đã
-                để lại ấn tượng khó phai trong lòng những thành viên tham dự.
-              </p>
-              <p class="mb-2">
-                Cháy hết mình trong chuyến đi thật ý nghĩa, mong rằng người nhà TIN đã ghi lại được nhiều bức ảnh,
-                câu chuyện và kỷ niệm tốt đẹp, giúp các thành viên có những phút giây thư giãn, gần nhau hơn.
-              </p>
-              <p class="mb-2">
-                Anh em trên toàn TIN đã đi nghỉ mát chưa? Cùng chia sẻ những khoảnh khắc đẹp nhất của kỳ nghỉ mát
-                2023 nhé
-              </p>
-            </div>
-
-            <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-full">
-              Xem chi tiết
-            </button>
-          </div>
-        </div>
-      </section>
-    </div> -->
-
 
     <div class="px-3 mx-auto sm:px-5 py-3 bg-[#e9e9e9]">
       <div class="px-3 mx-auto sm:px-5 max-w-7xl">
