--- a/contact.html
+++ b/contact.html
@@ -7,15 +7,15 @@
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Viettel tuyển dụng">
   <meta property="og:title" content="VIETTEL | Show us your way">
-  <meta property="og:url" content="https://tuyendung.viettel.vn">
+  <meta property="og:url" content="https://vietteltuyendung.com/">
   <meta property="og:description"
     content="Cùng Viettel kiến tạo tương lai - Ba điều Viettel sẽ mang đến cho bạn là cơ hội không ngừng sáng tạo, thách thức để khẳng định bản thân và điều kiện để học học và phát triển.">
   <meta property="fb:app_id" content="213262783496474">
-  <meta property="og:image" content="./image/social_image.jpg">
+  <meta property="og:image" content="https://vietteltuyendung.com/image/social_image.jpg">
   <meta property="og:image:width" content="574">
   <meta property="og:image:height" content="240">
-  <link rel='icon' type='image/x-icon' href='./image/LogoNew.ico' />
-  <link rel='shortcut icon' type='image/x-icon' href='./image/LogoNew.ico' />
+  <link rel='icon' type='image/x-icon' href='https://vietteltuyendung.com/image/LogoNew.ico' />
+  <link rel='shortcut icon' type='image/x-icon' href='https://vietteltuyendung.com/image/LogoNew.ico' />
   <title>Liên hệ - Viettel Tuyển Dụng</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="./css/flowbite.min.css" rel="stylesheet" />
@@ -142,34 +142,6 @@
           </div>
         </div>
       </section>
-
-      <!-- <section>
-        <div class="block gap-5 mt-5 md:flex">
-          <div class="w-full md:w-1/2">
-            <img src="https://picsum.photos/300/300" alt="" class="w-full">
-          </div>
-          <div class="w-full mt-3 md:w-1/2 md:mt-0">
-            <img src="https://picsum.photos/300/300" alt="" class="w-full">
-          </div>
-        </div>
-      </section> -->
-
-      <!-- <section>
-        <div class="flex flex-wrap justify-between gap-3 my-5">
-          <div>
-            <img src="./image/fb.png" alt="" class="w-16">
-          </div>
-          <div>
-            <img src="./image/tiktok.png" alt="" class="w-16">
-          </div>
-          <div>
-            <img src="./image/zalo.png" alt="" class="w-16">
-          </div>
-          <div>
-            <img src="./image/map.png" alt="" class="w-16">
-          </div>
-        </div>
-      </section> -->
 
     </div>
 
