update url image

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <section>
         <div class="block gap-10 my-10 md:flex">
           <div class="w-full md:w-1/3">
-            <img src="./image/slider-1.png" alt="">
+            <img src="./image/slider-1.jpg" alt="">
           </div>
           <div class="w-full mt-3 md:w-2/3 md:mt-0">
             <h3 class="text-[#ea0029] text-3xl md:text-4xl font-bold">BIẾN GIẤC MƠ THÀNH HIỆN THỰC
@@ -247,17 +247,17 @@
           <div class="relative h-60 sm:h-[300px] md:h-[450px] overflow-hidden rounded-lg lg:h-[700px]">
             <!-- Item 1 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-              <img src="./image/slider-1.png"
+              <img src="./image/slider-1.jpg"
                 class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="..." />
             </div>
             <!-- Item 2 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-              <img src="./image/slider-2.png"
+              <img src="./image/slider-2.jpg"
                 class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="..." />
             </div>
             <!-- Item 3 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-              <img src="./image/slider-3.png"
+              <img src="./image/slider-3.jpg"
                 class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 -" alt="..." />
             </div>
           </div>
