--- a/recruitment.html
+++ b/recruitment.html
@@ -214,7 +214,7 @@
           </div>
 
           <div class="flex justify-end w-full md:w-2/5">
-            <img src="./image/organization.png" alt="" class="w-full h-56 mx-auto sm:max-w-sm">
+            <img src="./image/organization.jpg" alt="" class="w-full h-56 mx-auto sm:max-w-sm">
           </div>
         </div>
       </section>
