--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 
     <div class="w-full h-[520px] relative">
       <div class="absolute top-0 left-0 w-full h-[520px] bg-gray-500 bg-center bg-cover brightness-75"
-        style="background-image: url('./image/about-image.png');"></div>
+        style="background-image: url('./image/about-image.jpg');"></div>
       <div class="absolute top-0 left-0 flex items-center justify-center w-full h-full">
         <div class="text-center">
           <p class="text-[33px] text-white uppercase">
