--- a/recruitment.html
+++ b/recruitment.html
@@ -178,7 +178,7 @@
         </div>
 
         <div class="my-10 text-center">
-          <a href="https://forms.gle/6BuZNvNiuqwzcGjd6" target="_blank">
+          <a href="https://forms.gle/cyKatNWWMFzSnHEH8" target="_blank">
             <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-[80%]">Ứng tuyển ngay</button>
           </a>
         </div>
@@ -227,8 +227,8 @@
             <ul class="ml-5 leading-7">
               <li class="list-disc">
                 Đăng ký nhanh tại link
-                <a href="https://forms.gle/6BuZNvNiuqwzcGjd6" target="_blank" class="text-blue-500 underline break-all">
-                  https://forms.gle/6BuZNvNiuqwzcGjd6</a>
+                <a href="https://forms.gle/cyKatNWWMFzSnHEH8" target="_blank" class="text-blue-500 underline break-all">
+                  https://forms.gle/cyKatNWWMFzSnHEH8</a>
               </li>
               <li class="list-disc">
                 Hoặc gửi CV tới
