change link form

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 </p>
               </li>
             </ul>
-            <a href="https://forms.gle/UvRMY2KqcKAfvxmg8" target="_blank">
+            <a href="https://forms.gle/hm32B6RGGUeyBXkS7" target="_blank">
               <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-full">
                 Đăng ký dự tuyển
               </button>
@@ -228,7 +228,7 @@
         </div>
 
         <div class="my-10 text-center">
-          <a href="https://forms.gle/UvRMY2KqcKAfvxmg8" target="_blank">
+          <a href="https://forms.gle/hm32B6RGGUeyBXkS7" target="_blank">
             <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-[80%]">Ứng tuyển ngay</button>
           </a>
         </div>
@@ -338,7 +338,7 @@
           <p>Hãy để lại thông tin của bạn để đăng ký dự tuyển ngay </p>
         </div>
 
-        <a href="https://forms.gle/UvRMY2KqcKAfvxmg8" target="_blank">
+        <a href="https://forms.gle/hm32B6RGGUeyBXkS7" target="_blank">
           <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-full">
             Đăng ký dự tuyển
           </button>
